--- a/templates/results.html
+++ b/templates/results.html
@@ -84,12 +84,13 @@
         <h2>You had already voted.</h2>
       </div>  
       {% endif %} 
+      <a href="../" class="btn btn-secondary">Back</a>
       <div>&nbsp</div>
       <div> <h2>Total No of Votes : {{ totol_votes }} </h2></div>
       <div>&nbsp</div>
       <div id="chartContainer" style="height: 70%; width: 100%;">
 
-      
+     
     
     </div>
 
