--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
     <div class="branding d-flex align-items-cente">
       <div class="container position-relative d-flex align-items-center justify-content-between">
         <a href="index.html" class="logo d-flex align-items-center">         
-          <h1 class="sitename">Elect Your President.</h1>
+          <h1 class="sitename"> <img src="../static/images/president.png" alt="Avatar" hieght="75px" width="60px" >Elect Your President.</h1>
           <span>.</span>
         </a>
         <nav id="navmenu" class="navmenu">          
