composite ip address

--- a/templates/results.html
+++ b/templates/results.html
@@ -84,6 +84,7 @@
         <h2>You had already voted.</h2>
       </div>  
       {% endif %} 
+      <div>&nbsp</div>
       <a href="../" class="btn btn-secondary">Back</a>
       <div>&nbsp</div>
       <div> <h2>Total No of Votes : {{ totol_votes }} </h2></div>
