--- a/templates/results.html
+++ b/templates/results.html
@@ -63,8 +63,8 @@
     <div class="branding d-flex align-items-cente">
       <div class="container position-relative d-flex align-items-center justify-content-between">
         <a href="index.html" class="logo d-flex align-items-center">         
-          <h1 class="sitename">Elect Your President. </h1>
-          <span>.</span>
+          <h5 class="sitename"> <img src="../static/images/president.png" alt="Avatar" hieght="75px" width="60px" >Elect Your President. </h1>
+          <span></span>
         </a>
         <nav id="navmenu" class="navmenu">          
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -78,10 +78,11 @@
   <div class="container">
       <div class="container section-title" data-aos="fade-up">            
       </div>
-       
+      <br/>
+      <br/>
       {% if aldyVoted %}
       <div class="alert alert-warning" role="alert" id="alertW2" style="text-align: center;">
-        <h2>You had already voted.</h2>
+        <h3>You had already voted.</h2>
       </div>  
       {% endif %} 
       <div>&nbsp</div>
