--- a/templates/results.html
+++ b/templates/results.html
@@ -42,7 +42,7 @@
           dataPoints: [
             { label: "Anura" , y: {{sum_akd}}, indexLabel: "{{pct_akd}}%" },
             { label: "Dilith", y: {{sum_dj}}, indexLabel: "{{pct_dj}}%"},
-            { label: "Namal", y: {{sum_nr}}, indexLabel: "{{pct_akd}}%"},
+            { label: "Namal", y: {{sum_nr}}, indexLabel: "{{pct_nr}}%"},
             { label: "Ranil", y: {{sum_rw}}, indexLabel: "{{pct_rw}}%"},
             { label: "Sarath", y: {{sum_sf}}, indexLabel: "{{pct_sf}}%"   },
             { label: "Sajith", y: {{sum_sp}}, indexLabel: "{{pct_sp}}%"    },
