--- a/templates/index.html
+++ b/templates/index.html
@@ -166,6 +166,7 @@
           First choose a candicate
         </div>   
         <div class="form-group col" style="text-align: center;">
+          <input class="form-control form-control-sm" type="text" id="txtpubIp" hidden>
           <button type="submit" class="btn btn-secondary">Vote</button>
           <button type="button" class="btn btn-secondary" onclick="clearForm()">Clear</button>
         </div>
@@ -209,7 +210,21 @@
 </body>
 </html>
 
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
+    
+    $(document).ready(function() {
+        $.get('https://api.ipify.org?format=json', function(data) {
+            $('#txtpubIp').val(data.ip);  
+            //$('#txtpubIp').text('QR');                          
+            //console.log("Client's Public IP Address: " + data.ip);        
+        });
+         
+
+    });
+
+  
+
   function validateForm() {
     var radios = document.getElementsByName('radioVote');
     var formValid = false;
